<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_knowledge</name>
  <version>1.0.0</version>
  <description>This packages takes the perception information from neural network and updates with it the ROS2 Knowledge Graph</description>
  <maintainer email="fergonzaramos@yahoo.es">Fernando González</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>ros2_knowledge_graph</depend>
  <depend>vision_msgs</depend>
  <depend>gb_visual_detection_3d_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
